--- a/.github/workflows/createAQAvitRelease.yml
+++ b/.github/workflows/createAQAvitRelease.yml
@@ -6,6 +6,9 @@ on:
       aqavitTagValue:
         description: The value of the tag to use (such as v1.0.0)
         required: true
+      jdkReleaseTags:
+        description: The set of JDK release prefix tags expected (such as 22.0.0,21.0.3,17.0.11,11.0.23,8u411)
+        required: true
 
 jobs:
   createAQAvitRelease:
@@ -18,5 +21,5 @@ jobs:
         run: ./tagRepos.sh ${{ inputs.aqavitTagValue }}
 
       - name: Run createRelBranch.sh
-        run: ./createRelBranch.sh ${{ inputs.aqavitTagValue }}
+        run: ./createRelBranch.sh ${{ inputs.aqavitTagValue }} ${{ inputs.jdkReleaseTags }}
         
